Closed Bug 321081 Opened 20 years ago Closed 20 years ago

at-poke shows Mozilla as application name when running Firefox

Categories

(Firefox :: Disability Access, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: nian.liu, Assigned: ginnchen+exoracle)

References

Details

(Keywords: access, fixed1.8.1)

Attachments

(1 file, 1 obsolete file)

1.run firefox 2.start at-poke expected result: firefox shows in application list actural result: mozilla shows in application list
for patch, refer to bug230144
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #207968 - Flags: review?(aaronleventhal)
Attachment #207968 - Flags: review?(aaronleventhal) → review+
Attachment #207968 - Flags: superreview?(roc)
I think GetBrandShortName should take an nsAString& parameter for output. Is it really necessary to cache the result?
roc's comment makes sense to me.
Attachment #210745 - Flags: superreview?(roc)
Attachment #210745 - Flags: superreview?(roc)
Attachment #210745 - Flags: superreview+
Attachment #210745 - Flags: review+
Checking in nsAppRootAccessible.cpp; /cvsroot/mozilla/accessible/src/atk/nsAppRootAccessible.cpp,v <-- nsAppRootAccessible.cpp new revision: 1.14; previous revision: 1.13 done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: access
Resolution: --- → FIXED
Attachment #210745 - Flags: branch-1.8.1?(aaronleventhal)
Attachment #207968 - Attachment is obsolete: true
Attachment #207968 - Flags: superreview?(roc)
Is this string designed to be presented to users or read by programs? Should you really be using a localizable string?
Present to user
I think Window/Frame/Dialog names tend to be human consumable, but the name of the top level application object (i.e., the parent of all windows/frames/dialogs of the app) tends to be a programmatic, non-localized string that typically reflects the name of the binary used to start the application.
I think app name should be localizable, but program name should not. See glib manual: g_get_application_name () Gets a human-readable name for the application, as set by g_set_application_name(). This name should be localized if possible, and is intended for display to the user. Contrast with g_get_prgname(), which gets a non-localized name.
Summary: at-poke shows Mozila as application name when running Firefox → at-poke shows Mozilla as application name when running Firefox
Version: unspecified → Trunk
Attachment #210745 - Flags: approval-branch-1.8.1?(aaronleventhal) → approval-branch-1.8.1+
Checking in src/atk/nsAppRootAccessible.cpp; /cvsroot/mozilla/accessible/src/atk/nsAppRootAccessible.cpp,v <-- nsAppRootAccessible.cpp new revision: 1.11.26.1; previous revision: 1.11 done
Keywords: fixed1.8.1
*** Bug 309789 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: