Bug 321081 at-poke shows Mozila as application name when running Firefox r+sr=roc